--- a/GrandAStudio.Filmia.csproj
+++ b/GrandAStudio.Filmia.csproj
@@ -20,7 +20,7 @@
     </SupportedCultures>
     <XapOutputs>true</XapOutputs>
     <GenerateSilverlightManifest>true</GenerateSilverlightManifest>
-    <XapFilename>GrandAStudio.Filmia.xap</XapFilename>
+    <XapFilename>Filmia.xap</XapFilename>
     <SilverlightManifestTemplate>Properties\AppManifest.xml</SilverlightManifestTemplate>
     <SilverlightAppEntry>GrandAStudio.Filmia.App</SilverlightAppEntry>
     <ValidateXaml>true</ValidateXaml>
@@ -191,13 +191,13 @@
     <Resource Include="Images\OPTIONS.png" />
     <Resource Include="Images\PLAY.png" />
     <Resource Include="Images\STATS.png" />
-    <Resource Include="Images\twitter_newbird_blue.png" />
     <Resource Include="Images\unlock - play when code is unlocked.mp3" />
     <Resource Include="icons\173.png" />
     <Resource Include="icons\200.png" />
     <Resource Include="icons\62.png" />
     <Resource Include="icons\99.png" />
     <Resource Include="Images\windows company logo.png" />
+    <Resource Include="Images\twitter_newbird_blue2.png" />
     <Content Include="sounds\ButtonPressed.wav" />
     <Content Include="sounds\Button_Pressed.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
