--- a/GrandAStudio.Filmia.csproj
+++ b/GrandAStudio.Filmia.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Util.cs" />
     <Compile Include="ViewModels\ItemViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="XNAAsyncDispatcher.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
